# portable-lce-gles2

./: .gitignore  README.md  meson.build
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
targets/app/: meson.build
targets/app/common/Iggy/gdraw/: gdraw.c
targets/minecraft/: meson.build
targets/minecraft/client/: Lighting.cpp  Minecraft.cpp  Minecraft.h
targets/minecraft/client/gui/: CreateWorldScreen.cpp  GuiComponent.cpp  Screen.cpp  Screen.h  ScrolledSelectionList.cpp  ScrolledSelectionList.h  SelectWorldScreen.cpp  SelectWorldScreen.h
targets/minecraft/client/renderer/: GameRenderer.cpp  LevelRenderer.cpp  Tesselator.cpp
targets/minecraft/client/renderer/entity/: EnderDragonRenderer.cpp
targets/minecraft/server/: MinecraftServer.cpp
targets/minecraft/world/level/storage/: McRegionLevelStorageSource.cpp  McRegionLevelStorageSource.h
targets/minecraft/world/level/storage/ConsoleSaveFileIO/: ConsoleSaveFileSplit.cpp  ConsoleSaveFileSplit.h
targets/platform/: JavaKeyInput.h  stubs.h
targets/platform/renderer/: meson.build
targets/platform/renderer/gl/: GLRenderer.cpp  gl3_loader.h  gl_compat.h
targets/platform/renderer/gl/shaders/: fragment_es.frag  vertex.vert  vertex_es.vert
targets/platform/sdl2/: Input.cpp  Input.h  Profile.cpp  Profile.h  Render.cpp  Render.h  Storage.cpp  Storage.h  gl3_loader.h  render_stubs.cpp
targets/platform/sdl2/shaders/: fragment.frag  fragment_es.frag  vertex.vert  vertex_es.vert
